history画面実装
